test/spec_vectors/simd_f32x4_rounding/fail/module_24.wat
(module (func $f32x4.nearest-arg-empty (result v128) (f32x4.nearest)))